--- a/app/src/main/res/layout/activity_search_item.xml
+++ b/app/src/main/res/layout/activity_search_item.xml
@@ -3,12 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="410dp"
+    android:layout_width="match_parent"
     android:layout_height="75dp"
+    android:gravity="center"
     tools:context="big.work.SearchActivity">
     <TextView
         android:id="@+id/search"
-        android:layout_width="380dp"
+        android:layout_width="360dp"
         android:layout_height="56dp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="15dp"
