--- a/app/src/main/res/layout/fragment_friend.xml
+++ b/app/src/main/res/layout/fragment_friend.xml
@@ -5,14 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <!--<android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/friend_tab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </android.support.design.widget.TabLayout>
-
-    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        app:tabTextColor="#8B7E66"
+        app:tabSelectedTextColor="#0000EE"
+        app:tabIndicatorColor="#0000EE"
+        />
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/friend_view_page"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />-->
+        android:layout_height="match_parent" />
+
 </LinearLayout>
