--- a/app/src/main/res/layout/fragment_set.xml
+++ b/app/src/main/res/layout/fragment_set.xml
@@ -12,22 +12,29 @@
         android:layout_gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         >
         <TextView
-            android:layout_width="415dp"
-            android:layout_height="85dp"
-            android:background="#EDEDED"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="80dp"
+            android:background="#00B2EE"
+            android:gravity="center"
+            android:text="设置"
+            android:textSize="30dp"
+            android:textColor="#FFFFFF"
             />
         <RelativeLayout
-            android:layout_width="415dp"
+            android:layout_width="match_parent"
             android:layout_height="55dp">
             <TextView
                 android:layout_width="150dp"
                 android:layout_height="55dp"
                 android:text="账号管理"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="8dp"
+                android:textColor="#000000"
                 />
             <ImageView
                 android:layout_width="150px"
@@ -51,16 +58,17 @@
                 android:layout_width="150dp"
                 android:layout_height="55dp"
                 android:text="手机号码"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="8dp"
+                android:textColor="#000000"
                 />
             <TextView
                 android:layout_width="150dp"
                 android:layout_height="25dp"
                 android:text="181******18"
                 android:textColor="#878787"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:layout_marginLeft="250dp"
                 android:layout_marginTop="20dp"
                 />
@@ -87,9 +95,10 @@
                 android:layout_width="150dp"
                 android:layout_height="55dp"
                 android:text="账号安全"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="8dp"
+                android:textColor="#000000"
                 />
             <TextView
                 android:layout_width="50dp"
@@ -114,9 +123,10 @@
                 android:layout_width="150dp"
                 android:layout_height="55dp"
                 android:text="QQ达人"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="8dp"
+                android:textColor="#000000"
                 />
             <TextView
                 android:layout_width="150dp"
@@ -150,9 +160,10 @@
                 android:layout_width="150dp"
                 android:layout_height="55dp"
                 android:text="消息通知"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="8dp"
+                android:textColor="#000000"
                 />
             <TextView
                 android:layout_width="50dp"
@@ -177,9 +188,10 @@
                 android:layout_width="150dp"
                 android:layout_height="55dp"
                 android:text="隐私"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="8dp"
+                android:textColor="#000000"
                 />
             <TextView
                 android:layout_width="50dp"
@@ -191,6 +203,36 @@
                 android:layout_marginLeft="380dp"
                 android:layout_marginTop="10dp"
                 />
+
+            <RelativeLayout
+                android:layout_width="415dp"
+                android:layout_height="55dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="0dp"
+                android:layout_marginRight="0dp"
+                android:layout_marginBottom="291dp">
+
+                <TextView
+                    android:layout_width="180dp"
+                    android:layout_height="55dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="8dp"
+                    android:text="免流量特权"
+                    android:textColor="#000000"
+                    android:textSize="25sp" />
+
+                <TextView
+                    android:layout_width="50dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="380dp"
+                    android:layout_marginTop="10dp"
+                    android:text=">"
+                    android:textColor="#878787"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
         </RelativeLayout>
         <TextView
             android:layout_width="415dp"
@@ -200,14 +242,15 @@
         <RelativeLayout
             android:layout_width="415dp"
             android:layout_height="55dp">
+
             <TextView
                 android:layout_width="150dp"
                 android:layout_height="55dp"
-                android:text="通用"
-                android:textSize="30sp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="8dp"
-                />
+                android:text="通用"
+                android:textSize="25sp"
+                android:textColor="#000000"/>
             <TextView
                 android:layout_width="50dp"
                 android:layout_height="40dp"
@@ -231,9 +274,10 @@
                 android:layout_width="150dp"
                 android:layout_height="55dp"
                 android:text="辅助功能"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="8dp"
+                android:textColor="#000000"
                 />
             <TextView
                 android:layout_width="50dp"
@@ -251,28 +295,7 @@
             android:layout_height="15dp"
             android:background="#EDEDED"
             />
-        <RelativeLayout
-            android:layout_width="415dp"
-            android:layout_height="55dp">
-            <TextView
-                android:layout_width="180dp"
-                android:layout_height="55dp"
-                android:text="免流量特权"
-                android:textSize="30sp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="8dp"
-                />
-            <TextView
-                android:layout_width="50dp"
-                android:layout_height="40dp"
-                android:text=">"
-                android:textColor="#878787"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                android:layout_marginLeft="380dp"
-                android:layout_marginTop="10dp"
-                />
-        </RelativeLayout>
+
         <TextView
             android:layout_width="415dp"
             android:layout_height="15dp"
@@ -285,9 +308,10 @@
                 android:layout_width="230dp"
                 android:layout_height="55dp"
                 android:text="关于QQ与帮助"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="8dp"
+                android:textColor="#000000"
                 />
             <TextView
                 android:layout_width="50dp"
@@ -312,9 +336,10 @@
                 android:layout_width="150dp"
                 android:layout_height="55dp"
                 android:text="辅助功能"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="8dp"
+                android:textColor="#000000"
                 />
             <TextView
                 android:layout_width="50dp"
