--- a/app/src/main/res/layout/friends_fragment.xml
+++ b/app/src/main/res/layout/friends_fragment.xml
@@ -5,9 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".FriendsFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Test" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
 </LinearLayout>
