--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -13,10 +13,12 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/home_toolbar"
         android:layout_width="match_parent"
+        android:background="#00B2EE"
         android:layout_height="?attr/actionBarSize">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#00B2EE"
         android:layout_marginRight="10dp">
         <ImageView
             android:id="@+id/slide_menu_button"
