--- a/app/src/main/res/layout/fragment_set.xml
+++ b/app/src/main/res/layout/fragment_set.xml
@@ -14,19 +14,10 @@
         android:layout_height="match_parent"
         android:gravity="center"
         >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginTop="80dp"
-            android:background="#00B2EE"
-            android:gravity="center"
-            android:text="设置"
-            android:textSize="30dp"
-            android:textColor="#FFFFFF"
-            />
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="55dp">
+            android:layout_height="55dp"
+            android:layout_marginTop="35dp">
             <TextView
                 android:layout_width="150dp"
                 android:layout_height="55dp"
